[package]
name = "ephemeral-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ephemeral_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
ephemeral-rollups-sdk = { version = "0.2.4", features = ["anchor"] }
pyth-solana-receiver-sdk = "0.6.0"
